--- a/.github/workflows/auto-add-to-project.yml
+++ b/.github/workflows/auto-add-to-project.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/add-to-project@v0.3.0
         with:
           project-url: https://github.com/orgs/zkSNACKs/projects/18
-          github-token: ${{ secrets.AUTO_ADD_TO_PROJECT_TOKEN }}
+          github-token: ${{ secrets.AUTO_ADD_TO_PROJECT_TOKEN || github.token }}
