--- a/WalletWasabi.Packager/Properties/launchSettings.json
+++ b/WalletWasabi.Packager/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "WalletWasabi.Packager": {
       "commandName": "Project",
-      "commandLineArgs": "generateprivatekey"
+      "commandLineArgs": "generatekeys"
     }
   }
 }
