Initial support for Avalonia 11 preview 4

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -4,6 +4,6 @@
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="AvaloniaCI" value="https://pkgs.dev.azure.com/AvaloniaUI/AvaloniaUI/_packaging/avalonia-all/nuget/v3/index.json" protocolVersion="3" />
+    <add key="XamlBehaviorsNightly" value="https://www.myget.org/F/xamlbehaviors-nightly/api/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
- 
