--- a/.editorconfig
+++ b/.editorconfig
@@ -293,5 +293,5 @@ dotnet_diagnostic.CA1822.severity = none
 # Spell Checker rules
 spelling_languages = en-us
 spelling_checkable_types = strings,identifiers,comments
-spelling_error_severity = warning
+spelling_error_severity = information
 spelling_exclusion_path = .\exclusion.dic
