--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,9 @@
 * text=auto
 **/osx64/Tor/tor text eol=lf
 
+# Visual Studio spell checker file should be treated as a text file, not a binary file.
+exclusion.dic     text
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
@@ -18,7 +21,7 @@
 #
 # Merging from the command prompt will add diff markers to the files if there
 # are conflicts (Merging from VS is not affected by the settings below, in VS
-# the diff markers are never inserted). Diff markers may cause the following 
+# the diff markers are never inserted). Diff markers may cause the following
 # file extensions to fail to load in VS. An alternative would be to treat
 # these files as binary and thus will always conflict and require user
 # intervention with every merge. To do so, just uncomment the entries below
@@ -47,9 +50,9 @@
 
 ###############################################################################
 # diff behavior for common document formats
-# 
+#
 # Convert binary document formats to text before diffing them. This feature
-# is only available from the command line. Turn it on by uncommenting the 
+# is only available from the command line. Turn it on by uncommenting the
 # entries below.
 ###############################################################################
 #*.doc   diff=astextplain
