Remove .netcore3.1 from ZXing.SkiaSharp targets
Setting SetTargetFramework inside a project reference doesn't work in
case of multi-target. Therefore removing .netcore3.1 from TFMs.

See https://github.com/dotnet/sdk/issues/2280#issuecomment-811093011.

--- a/Dependencies/ZXing.Net/Source/Bindings/ZXing.SkiaSharp/ZXing.SkiaSharp.csproj
+++ b/Dependencies/ZXing.Net/Source/Bindings/ZXing.SkiaSharp/ZXing.SkiaSharp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Condition="'$(VisualStudioVersion)' == '16.0'">
     <TargetFrameworks>net462;netstandard1.3;netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
@@ -63,12 +63,6 @@
     <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
     <DebugType>portable</DebugType>
     <NetStandardImplicitPackageVersion>2.0.0</NetStandardImplicitPackageVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
-    <DefineConstants>$(DefineConstants);NETCOREAPP3_1</DefineConstants>
-    <UseWindowsForms>true</UseWindowsForms>
-    <UseWPF>true</UseWPF>
   </PropertyGroup>
   
 </Project>
