Mute DeepSource for ZXing and FlashCam

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,5 +1,10 @@
 version = 1
 
+exclude_patterns = [
+  "WalletWasabi.Fluent/FlashCap/**",
+  "WalletWasabi.Fluent/ZXing/**"
+
+]
 [[analyzers]]
 name = "csharp"
 
