--- a/WalletWasabi.Fluent/WalletWasabi.Fluent.csproj
+++ b/WalletWasabi.Fluent/WalletWasabi.Fluent.csproj
@@ -34,9 +34,7 @@
 		<!-- See explanation of the additional properties here: https://github.com/dotnet/roslyn/issues/60744#issuecomment-1438273464 -->
 		<ProjectReference Include="..\WalletWasabi.Fluent.Generators\WalletWasabi.Fluent.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" AdditionalProperties="IsRidAgnostic=true" />
 
-		<ProjectReference Include="..\Dependencies\ZXing.Net\Source\Bindings\ZXing.SkiaSharp\ZXing.SkiaSharp.csproj">
-			<SetTargetFramework>TargetFramework=netstandard2.1</SetTargetFramework>
-		</ProjectReference>
+		<ProjectReference Include="..\Dependencies\ZXing.Net\Source\Bindings\ZXing.SkiaSharp\ZXing.SkiaSharp.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
