--- a/WalletWasabi/WalletWasabi.csproj
+++ b/WalletWasabi/WalletWasabi.csproj
@@ -31,7 +31,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.3" />
 		<PackageReference Include="Microsoft.Win32.SystemEvents" Version="7.0.0" />
-		<PackageReference Include="NBitcoin" Version="7.0.24" />
+		<PackageReference Include="NBitcoin.Kimi" Version="7.0.25.1" />
+		<!--<PackageReference Include="NBitcoin" Version="7.0.24" />-->
 		<PackageReference Include="WabiSabi" Version="1.0.1.2" />
 	</ItemGroup>
 
